aggiustati sfondi ed inseriti messaggi provvisori

--- a/index.html
+++ b/index.html
@@ -88,12 +88,20 @@
                     </div>
 
                     <div class="chat-content">
-                        <div class="sent">
-                            <p>
-                                
-                            </p>
+                        <div class="messages clearfix">
+                            <article class="message received">
+                                ciao
+                            </article>
+                            <article class="message sent">
+                                ciaoaoaai
+                            </article>
+                            <article class="message received">
+                                jxixihi
+                            </article>
+                            <article class="message sent">
+                                jjbbbibi
+                            </article>
                         </div>
-                        <div class="received"></div>
                     </div>
                     <div class="text-area-amico">
                         <div class="tastiera flex">
