inserite correttamente foto profilo amici

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 jxixihi
                             </article>
                             <article class="message sent">
-                                jjbbbibi
+                                uuuhu
                             </article>
                         </div>
                     </div>
