provato ad aggiungere messaggio nel html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="chat-content">
                         <div class="messages clearfix">
                             <article class="message received">
-                                ciao
+                                <!--{{ contacs.messages[1].message }}-->
                             </article>
                             <article class="message sent">
                                 ciaoaoaai
