--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="chat-content">
                         <div class="messages clearfix">
                             <article class="message received">
-                                <!--{{ contacs.messages[1].message }}-->
+                                <!--{{ contacts.messages[1].message }}-->
                             </article>
                             <article class="message sent">
                                 ciaoaoaai
