--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
     
         </main>
 
-        <li v-for=" macchina in macchine ">
+        <li v-for=" element in macchine ">
             <p>
-                {{ macchina.macchina }}
+                {{ element.macchina }}
             </p>
             
 
