cercato di inserire l'input

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="tastiera">
                             <input class="area-testo-amico" type="text" 
                             placeholder="  Scrivi un messaggio"  
-                            name="messaggioPerAmico" id="messaggioPerAmico">
+                            name="messaggioPerAmico" id="messaggioPerAmico" v-model="newMessage" @keyup.enter="addNewMessage(newMessage)">
                             </div>
                         <div class="microfono">
                             <i class="fa-solid fa-microphone"></i>
